# one_max_ga

./: README.md  pyproject.toml
examples/: run_ga.py
src/one_max_ga/: algorithm.py  chromosome.py  population.py  selectors.py  terminators.py
tests/: test_algorithm.py  test_chromosome.py  test_elite_selector.py  test_population.py
tests/terminators/: test_max_generation_terminator.py
